@@ -7,18 +7,6 @@
     <groupId>proyectologin.com.es</groupId>
     <artifactId>login</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
 
@@ -66,8 +54,106 @@
             <artifactId>maven-deploy-plugin</artifactId>
             <version>3.0.0-M1</version>
         </dependency>
-
-
     </dependencies>
+
+    <build>
+        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+            <plugins>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
+                    <configuration>
+                        <release>11</release>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.1</version>
+                    <configuration>
+                        <useSystemClassLoader>false</useSystemClassLoader>
+                        <runOrder>random</runOrder>
+                        <!--runOrder>alphabetical</runOrder -->
+                        <!-- <rerunFailingTestsCount>3</rerunFailingTestsCount> -->
+                        <skipAfterFailureCount>50</skipAfterFailureCount>
+                        <testFailureIgnore>false</testFailureIgnore>
+                        <failIfNoTests>false</failIfNoTests>
+                        <!--generateReports>false</generateReports -->
+                        <!-- <parallel>methods</parallel> -->
+                        <!-- <perCoreThreadCount>1</perCoreThreadCount> -->
+                        <!-- <parallel>classes</parallel> -->
+                        <!-- <threadCount>2</threadCount> -->
+                        <!-- <forkCount>2</forkCount> -->
+                        <!-- <reuseForks>true</reuseForks> -->
+
+                        <trimStackTrace>false</trimStackTrace>
+                        <reportFormat>plain</reportFormat>
+                        <!--redirectTestOutputToFile>true</redirectTestOutputToFile -->
+
+                        <systemPropertyVariables>
+                            <log4j.configuration>log4j.properties</log4j.configuration>
+                        </systemPropertyVariables>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                        <systemProperties>
+                            <property>
+                                <name>java.util.logging.config.file</name>-
+                                <value>src/test/resources/logging.properties</value>
+                            </property>
+                        </systemProperties>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-report-plugin</artifactId>
+                    <version>2.22.1</version>
+                    <configuration>
+                        <showSuccess>true</showSuccess>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.22.1</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.7.1</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.1.1</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>2.5.2</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                </plugin>
+
+
+
+            </plugins>
+        </pluginManagement>
+
+
+    </build>
 
 </project>
